using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Character : MonoBehaviour
{
    public bool isPlayer;// ‚¢‚ç‚È‚¢‚©‚à

    public bool isDying;// •m€ó‘Ô‚©

    public bool isFainted;//‹Câó‘Ô‚©
}